--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,7 +11,7 @@
         margin-right: auto;
         padding: 10px 0;
         img{
-            width: 160px;
+            width: 200px;
             max-width: 80vw;
         }
     }
